--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "care4skinonline",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest",
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "dependencies": {
+    "express": "^5.2.1",
+    "pg": "^8.16.3"
+  },
   "devDependencies": {
-    "cypress": "^15.8.2"
+    "jest": "^30.2.0"
   }
 }
